# EnviroDataQC

./: .gitignore  API.md  README.md  pyproject.toml  setup.cfg  setup.py
awsdeploy/: deploy.md
envirodataqc/: QCconfig.py  __init__.py  checkdata.py  config.yaml  dataqc.py  qc.py  wind.py
experiments/: checkdata.py  config.yaml  flattest.py  ideas.py  pandas2.py  pandastest.py  ratetests.py  testvals.py  testwind.py  testyaml.py  typecheck.py
src/envirodataqc/: dataqc.py  wind.py
tests/: basicdata.csv  basictest.py  quickdaily.py
tests/data/: .~lock.basicdata.csv#  .~lock.testdata.ods#  data.csv  data.ods  testdata.ods  testdata1.csv  testdata1.ods  tphdata.csv
tests/interactive/: airTtest.ipynb  preciptest.ipynb  windtest.ipynb
tests/unit/: pandasbug.py  test_EnviroDataQC.py  test_checkvals.py  test_dailyquality.py  test_dataqc.py  test_wind.py
