[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "envirodataqc"
version = "0.3.1"
authors=[{name="Chris Cox",email="chrisrycx@gmail.com"}]
description = "Environmental data quality control"
readme = "README.md"
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies=[
    "pandas"
]

[project.urls]
repository = "https://github.com/chrisrycx/EnviroDataQC"